--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 
     <aside class="sidebar">
-      <img src="jomel.JPG" alt="Jomel Guzman" id="profileImage" />
+      <img src="jomel.jpg" alt="Jomel Guzman" id="profileImage" />
       <h2>Jomel Guzman</h2>
       <p>Good Student | My Personal Information </p>
 
@@ -397,3 +397,4 @@
 
 </body>
 </html>
+
