--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <a href="#hobbies"><i class="fas fa-heart"></i>Hobbies</a>
         <a href="#background"><i class="fas fa-briefcase"></i>Background</a>
         <a href="#skills"><i class="fas fa-lightbulb"></i>Skills</a>
-        <a href="#projects"><i class="fas fa-code"></i>Projects</a>
+        <a href="#projects"><i class="fas fa-code"></i>Status</a>
         <a href="#education"><i class="fas fa-graduation-cap"></i>Education</a>
         <a href="#achievements"><i class="fas fa-trophy"></i>Achievements</a>
         <a href="#contact"><i class="fas fa-envelope"></i>Contact</a>
@@ -397,5 +397,6 @@
 
 </body>
 </html>
+
 
 
