--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
   <!-- Zoom Overlay -->
   <div class="image-zoom-overlay" id="zoomOverlay">
-    <img src="jomel.JPG" alt="Zoomed Jomel" />
+    <img src="https://github.com/jomskiee64/my-portfolio/blob/main/jomel.jpg?raw=true" alt="Zoomed Jomel" />
   </div>
 
   <script>
@@ -397,6 +397,7 @@
 
 </body>
 </html>
+
 
 
 
